--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -38,6 +38,7 @@ body
         @include vertical-center();
         &:hover
         {
+          color: #07c;
           cursor: pointer;
         }
       }
@@ -65,6 +66,7 @@ body
         font-weight: 700;
         &:hover
         {
+          background: #335D99;
           cursor: pointer;
         }
         @include break-point(650px) 
@@ -238,7 +240,7 @@ body
           width: calc(100% - 5px);
         }
         input {
-          width: calc(100% - 63px);
+          width: calc(100% - 66px);
           height: 100%;
           padding-left: 60px;
           margin: 4px;
@@ -1411,7 +1413,7 @@ body
       &:hover
       {
         background: #335D99;
-        color: #fff;
+        cursor: pointer;
       }
     }
   }
@@ -1467,6 +1469,7 @@ body
         &:hover
         {
           cursor: pointer;
+          color:#febb02;
         }
       }
     }
@@ -1493,6 +1496,11 @@ body
     font-size: 14px;
     font-weight: 700;
     color: #0077cc;
+    &:hover
+    {
+      cursor: pointer;
+      color:#febb02;
+    }
   }
   p.st-copyrights 
   {
@@ -1518,6 +1526,8 @@ body
     padding: 0px 15px;
     grid-template-columns: repeat(6, 1fr);
     grid-gap: auto;
+    justify-items: center;
+    text-align: center;
     @include break-point(750px) 
     {
       grid-template-columns: repeat(3, 1fr);
