--- a/scss/styles.css
+++ b/scss/styles.css
@@ -18,11 +18,16 @@ body div.st-header div.st-top {
 body div.st-header div.st-top img.st-logo {
   width: 150px;
   height: 25px;
-  margin-left: 7px;
   position: relative;
   top: 50%;
   -webkit-transform: translateY(-50%);
   transform: translateY(-50%);
+}
+
+@media (max-width: 1100px) {
+  body div.st-header div.st-top img.st-logo {
+    margin-left: 7px;
+  }
 }
 
 body div.st-header div.st-top input.st-button {
@@ -925,6 +930,12 @@ body div.st-accommodation p.st-title {
   margin: 0px 0px 16px;
 }
 
+@media (max-width: 1100px) {
+  body div.st-accommodation p.st-title {
+    margin-left: 7px;
+  }
+}
+
 body div.st-accommodation div.st-sorts {
   display: -ms-grid;
   display: grid;
@@ -1406,6 +1417,7 @@ body div.st-things-holder div p.st-text:hover {
   height: calc(100% - 86px);
   background-color: rgba(0, 0, 0, 0.3);
   padding: 0 15px;
+  text-align: justify;
 }
 
 body div.st-things-holder div p.st-location-name {
